--- a/css/index.css
+++ b/css/index.css
@@ -11,10 +11,17 @@
 .link.involed {
     stroke: red;
 }
+.event-line {
+    stroke-width: 5;
+    
+}
 
 .node text {
   pointer-events: none;
   font: 10px sans-serif;
+}
+.node.primary circle{
+    stroke: red;
 }
 .node.involed circle{
     stroke: orange;
@@ -22,7 +29,43 @@
 .node.involed text{
     stroke: orange;
 }
+.node.group-1 {
+    stroke: rgb(3,210,255);
+}
+.node.group-2 {
+    stroke: rgb(167,22,255);
+}
+.node.group-3 {
+    stroke: rgb(250,43,111);
+}
+.node.group-4 {
+    stroke: rgb(255,220,6);
+}
 
 .hidden {
     display: none;
+}
+
+.node-tip {
+    line-height: 1;
+    font-weight: bold;
+    padding: 12px;
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    border-radius: 2px;
+}
+
+/* Creates a small triangle extender for the tooltip */
+.node-tip:after {
+    display: inline;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    box-sizing: border-box;
+    font-size: 10px;
+    width: 100%;
+    line-height: 1;
+    color: rgba(0, 0, 0, 0.8);
+    content: "\25BC";
+    text-align: center;
 }
