--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,97 @@
 body{
-    background-color:#f5f5f5;
+background-color: #f5f5f5;
+
+
+}
+#doc{
+    background:url("img/background.png") no-repeat;
+    width: 1168px;
+    height: 648px;
+    margin:auto;
+    overflow: relative;
+
+}
+#pic-1{
+    top:200px;
+    left:100px;
+    width:40px;
+    height:40px;
+    background:url("img/1.png") no-repeat;
+
+}
+#pic-2{
+    top:100px;
+    left:500px;
+    width:40px;
+    height:50px;
+    background:url("img/2.png") no-repeat;
+
+}
+#pic-3{
+    top:20px;
+    left:1200px;
+    width:26px;
+    height:30px;
+    background:url("img/3.png") no-repeat;
+
+}
+#pic-4{
+    top:500px;
+    left:400px;
+    width:30px;
+    height:26px;
+    background:url("img/4.png") no-repeat;
+
+}
+#pic-5{
+    top:300px;
+    left:1000px;
+    width:76px;
+    height:75px;
+    background:url("img/5.png") no-repeat;
+
+}
+#pic-6{
+    top:500px;
+    left:800px;
+    width:70px;
+    height:70px;
+    background:url("img/6.png") no-repeat;
+
+}
+#pic-7{
+    top:840px;
+    left:500px;
+    width:14px;
+    height:14px;
+    background:url("img/7.png") no-repeat;
+
+}
+@-webkit-keyframes rotate{
+from{-webkit-transform:rotate(0deg)}
+to{-webkit-transform:rotate(360deg)}
+}
+@-moz-keyframes rotate{
+from{-moz-transform:rotate(0deg)}
+to{-moz-transform:rotate(360deg)}
+}
+@-ms-keyframes rotate{
+from{-ms-transform:rotate(0deg)}
+to{-ms-transform:rotate(360deg)}
+}
+@-o-keyframes rotate{
+from{-o-transform:rotate(0deg)}
+to{-o-transform:rotate(360deg)}
+}
+.small-pic{
+    position: absolute;
+    animation: 1.5s linear 0s normal none infinite rotate;
+-webkit-animation:1.5s linear 0s normal none infinite rotate;
+}
+.small-pic:hover {
+-webkit-transform: rotateZ(360deg);
+-moz-transform: rotateZ(360deg);
+-o-transform: rotateZ(360deg);
+-ms-transform: rotateZ(360deg);
+transform: rotateZ(360deg);
 }
