添加辅助线使得line的事件更容易触发

--- a/css/index.css
+++ b/css/index.css
@@ -12,8 +12,8 @@
     stroke: red;
 }
 .event-line {
-    stroke-width: 5;
-    
+    stroke: transparent;
+    stroke-width: 15;
 }
 
 .node text {
