--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,7 @@
 .node.primary circle{
     stroke: red;
 }
-.node.involed circle{
+.node.involed use{
     stroke: orange;
 }
 .node.involed text{
@@ -46,7 +46,7 @@
     display: none;
 }
 
-.node-tip {
+.link-tip, .node-tip {
     line-height: 1;
     font-weight: bold;
     padding: 12px;
@@ -56,7 +56,7 @@
 }
 
 /* Creates a small triangle extender for the tooltip */
-.node-tip:after {
+.link-tip:after, .node-tip:after {
     display: inline;
     position: absolute;
     top: 100%;
