--- a/css/index.css
+++ b/css/index.css
@@ -46,8 +46,8 @@
     line-height: 1;
     font-weight: bold;
     padding: 12px;
-    background: #b6f1f8;
-    color: #e0d7d7;
+    background: #03d2ff;
+    color: #fff;
     border-radius: 2px;
 }
 
@@ -61,7 +61,7 @@
     font-size: 10px;
     width: 100%;
     line-height: 1;
-    color: rgba(0, 0, 0, 0.8);
+    color: #03d2ff;
     content: "\25BC";
     text-align: center;
 }
